Fixed some bugs

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <h1>Top movies API</h1>
   </div>
   <div class="description">
-    <p>A simple API that can return basic information about the top 250 movies listed in IMDb. Data is scraped from <%= link_to "IMDb", "https://www.imdb.com/chart/top" %>.</p>
+    <p>A simple API that returns basic information about the top 250 movies listed in IMDb. Data is scraped from <%= link_to "IMDb", "https://www.imdb.com/chart/top" %>.</p>
   </div>
   <h2>Usage</h2>
   <div class="usage">
@@ -29,7 +29,7 @@
     <div class="form-row align-items-center">
       <div class="col-sm-11 my-1">
         <label class="sr-only" for="inlineFormInputName">URL</label>
-        <input type="text" class="form-control" id="inlineFormInputName" placeholder="Jane Doe">
+        <input type="text" class="form-control" id="api-query" placeholder="Jane Doe">
       </div>
       <div class="col-sm-1 my-1">
         <button type="submit" class="btn btn-primary" id="api-button">Search</button>
