--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,16 +25,14 @@
     <p><em>https://top-250-movies-api.herokuapp.com/api/v1/search?query=2009</em></p>
     <p><em>https://top-250-movies-api.herokuapp.com/api/v1/search?query=drama</em></p>
   </div>
-  <form>
-    <div class="form-row align-items-center">
-      <div class="col-sm-11 my-1">
-        <label class="sr-only" for="inlineFormInputName">URL</label>
-        <input type="text" class="form-control" id="api-query" placeholder="Jane Doe">
-      </div>
-      <div class="col-sm-1 my-1">
-        <button type="submit" class="btn btn-primary" id="api-button">Search</button>
-      </div>
+  <div class="form-row align-items-center">
+    <div class="col-sm-10 my-1">
+      <label class="sr-only" for="inlineFormInputName">URL</label>
+      <input type="text" class="form-control" id="api-query" placeholder="Type the URL here">
     </div>
-  </form>
+    <div class="col-sm-2 my-1">
+      <button type="submit" class="btn btn-primary w-100" id="api-button">Search</button>
+    </div>
+  </div>
   <div class="border w-100 h-50" id="api-display"></div>
 </div>
