--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,14 @@
 // Specific CSS for your home-page
+.header-container {
+  margin-top: 4%;
+  text-align: center;
+  margin-bottom: 24px;
+}
+.description {
+  text-align: center;
+}
+.usage-container {
+  background: white;
+  padding: 8px;
+  border-radius: 8px;
+}
