--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,29 +1,31 @@
 <div class="container">
-  <div class="header">
-    <h1>Top movies API</h1>
+  <div class="header-container">
+    <h1>Top Movies API</h1>
   </div>
   <div class="description">
     <p>A simple API that returns basic information about the top 250 movies listed in IMDb. Data is scraped from <%= link_to "IMDb", "https://www.imdb.com/chart/top" %>.</p>
   </div>
-  <h2>Usage</h2>
-  <div class="usage">
-    <h3>Retrieve all movies</h3>
-    <p>Request URL: <em>https://top-250-movies-api.herokuapp.com/api/v1/movies</em></p>
-  </div>
-  <div class="usage">
-    <h3>Retrieve a specific movie</h3>
-    <p>Request URL: <em>https://top-250-movies-api.herokuapp.com/api/v1/movies/#ID</em></p>
-    <p>Sample Usage: <em>https://top-250-movies-api.herokuapp.com/api/v1/movies/1</em></p>
-  </div>
-  <div class="usage">
-    <h3>Retrieve a movie or movies using keywords(Movie title, Director, Actor's name, Year of release and Genre)</h3>
-    <p>Request URL: <em>https://top-250-movies-api.herokuapp.com/api/v1/search?query=#KEYWORD</em></p>
-    <p>Sample Usages: <br>
-      <em>https://top-250-movies-api.herokuapp.com/api/v1/search?query=inception</em></p>
-    <p><em>https://top-250-movies-api.herokuapp.com/api/v1/search?query=nolan</em></p>
-    <p><em>https://top-250-movies-api.herokuapp.com/api/v1/search?query=bale</em></p>
-    <p><em>https://top-250-movies-api.herokuapp.com/api/v1/search?query=2009</em></p>
-    <p><em>https://top-250-movies-api.herokuapp.com/api/v1/search?query=drama</em></p>
+  <div class="usage-container">
+    <h2>Usage:</h2>
+    <div class="usage">
+      <h3>Retrieve all movies</h3>
+      <p>Request URL: <em>https://top-250-movies-api.herokuapp.com/api/v1/movies</em></p>
+    </div>
+    <div class="usage">
+      <h3>Retrieve a specific movie</h3>
+      <p>Request URL: <em>https://top-250-movies-api.herokuapp.com/api/v1/movies/#ID</em></p>
+      <p>Sample Usage: <em>https://top-250-movies-api.herokuapp.com/api/v1/movies/1</em></p>
+    </div>
+    <div class="usage">
+      <h3>Retrieve a movie or movies using keywords(Movie title, Director, Actor's name, Year of release and Genre)</h3>
+      <p>Request URL: <em>https://top-250-movies-api.herokuapp.com/api/v1/search?query=#KEYWORD</em></p>
+      <p>Sample Usages: <br>
+        <em>https://top-250-movies-api.herokuapp.com/api/v1/search?query=inception</em></p>
+      <p><em>https://top-250-movies-api.herokuapp.com/api/v1/search?query=nolan</em></p>
+      <p><em>https://top-250-movies-api.herokuapp.com/api/v1/search?query=bale</em></p>
+      <p><em>https://top-250-movies-api.herokuapp.com/api/v1/search?query=2009</em></p>
+      <p><em>https://top-250-movies-api.herokuapp.com/api/v1/search?query=drama</em></p>
+    </div>
   </div>
   <div class="form-row align-items-center">
     <div class="col-sm-10 my-1">
